--- a/views/partials/heads/homeHead.ejs
+++ b/views/partials/heads/homeHead.ejs
@@ -2,3 +2,4 @@
 <title><%-  parsed_setting_desc.menu[4] %></title>
 <link rel="stylesheet" href="/style/homepage.css">
 <%- include('../heads/commonHead'); %>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
