--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -17,7 +17,7 @@
             <img src="<%- parsed_bio.image_home[0] %>"  id="imgHome">
         </div>
 
-        <div class="d-flex justify-content-md-center justify-content-lg-start align-items-end" id="personnalText">
+        <div class="d-flex justify-content-md-center justify-content-lg-start align-items-start" id="personnalText">
             <h1><%- parsed_bio.text_bio[0] %> <span class="description" id="typed-desc"></span> </h1>
         </div>
 
