--- a/views/pages/projetPage.ejs
+++ b/views/pages/projetPage.ejs
@@ -132,32 +132,34 @@
       <% project_gallery_array.forEach(item => {
         if (helper.isImg(item) == false){
           if (imgIsFirst) { %>
-            <div class="col-md-12 col-lg-4 d-flex flex-column align-items-md-center justify-content-md-center justify-content-lg-center align-items-lg-start margin-bottom-32">
-              <div class="textProject"><%- item %></div>
+              <div class="order-md-1 order-lg-3 col-md-12 col-lg-4 d-flex flex-column align-items-md-center justify-content-md-center justify-content-lg-center align-items-lg-start margin-bottom-32">
+                <div class="textProject"><%- item %></div>
+              </div>
+              <div class="order-lg-4 col-lg-2"></div>
             </div>
-            <div class="col-lg-2"></div>
             <% imgIsFirst = false;
           } else { %>
-            <div class="col-lg-2"></div>
-            <div class="col-md-12 col-lg-4 d-flex flex-column align-items-md-center justify-content-md-center justify-content-lg-center align-items-lg-start margin-bottom-32">
-              <div class="textProject"><%- item %></div>
-            </div>
-            <% imgIsFirst = true;
-          } %>
+            <div class="row">
+              <div class="order-lg-1 col-lg-2"></div>
+              <div class="order-md-1 order-lg-2 col-md-12 col-lg-4 d-flex flex-column align-items-md-center justify-content-md-center justify-content-lg-center align-items-lg-start margin-bottom-32">
+                <div class="textProject"><%- item %></div>
+              </div>
+          <% }
 
-        <% } else { %>
+          } else { %>
           
           <% if(imgIsFirst) { %>
-            <div class="col-md-12 col-lg-4 d-flex align-items-md-center justify-content-md-center align-items-lg-end justify-content-lg-end margin-bottom-32">
-              <img src="<%- item %>" class="imgContentProjet">
-            </div>        
-            <div class="col-lg-2"></div>
-            <% imgIsFirst = false;
-          } else { %>
-            <div class="col-lg-2"></div>         
-            <div class="col-md-12 col-lg-4 d-flex align-items-md-center justify-content-md-center align-items-lg-start justify-content-lg-start margin-bottom-32">
-              <img src="<%- item %>" class="imgContentProjet">
-            </div>
+            <div class="row">
+              <div class="order-lg-1 col-lg-2"></div>
+              <div class="order-md-2 order-lg-2 col-md-12 col-lg-4 d-flex align-items-md-center justify-content-md-center align-items-lg-end justify-content-lg-start margin-bottom-32">
+                <img src="<%- item %>" class="imgContentProjet">
+              </div>
+          <% } else { %>
+              <div class="order-md-2 order-lg-3 col-md-12 col-lg-4 d-flex align-items-md-center justify-content-md-center align-items-lg-start justify-content-lg-end margin-bottom-32">
+                <img src="<%- item %>" class="imgContentProjet">
+              </div>
+              <div class="order-lg-4 col-lg-2"></div>    
+            </div>     
             <% imgIsFirst = true;
           }
         }
@@ -182,7 +184,10 @@
   </html>
 
   <style>
-
+    .imgContentProjet {
+      width: 100%;
+      height: auto;
+    }
     .arrowLinkProjects {
       height: 25px;
     }
@@ -233,7 +238,7 @@
     @media screen and (max-width: 980px) {
 
       .textProject {
-        padding: 0 82px;
+        padding: 32px 64px;
       }
 
       .mouse-container {
@@ -249,6 +254,9 @@
       }
       .brief-title h2{
         font-size: calc(var(--custom-h1-size) * 1.3);
+      }
+      .imgContentProjet {
+      padding: 32px 64px;
       }
 
     }
