adding google analytics script

--- a/views/partials/heads/commonHead.ejs
+++ b/views/partials/heads/commonHead.ejs
@@ -3,6 +3,16 @@
 <link rel="stylesheet" href="/style/socialMedia.css">
 <link rel="icon" type="image/x-icon" href="<%- userInfos.avatar_url %>">
 <%- parsed_setting_desc.font_link[0] %>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S7D8H60XX4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S7D8H60XX4');
+</script>
 <style>
     :root {
 
