--- a/public/style/contact.css
+++ b/public/style/contact.css
@@ -56,8 +56,9 @@ body{
     }
 
     #QRcode img {
-        margin-left: 0;
-        margin-right: 0
+        width: 600px;
+        height: 600px;
+        margin-left: calc(50% - 300px);
     }
 
     .contact-first-row {
