fix footer in contact and responsive

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -221,7 +221,7 @@ p{
 @media screen and (max-width:980px){
 
     body{
-        display: block;
+        display: grid;
     }
     .header {
         height: 130px;
