--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -39,6 +39,8 @@
         <img src="<%- parsed_setting_desc.qr_code[0]%>">
     </div>
 
+    <div class="row"></div>
+
     <footer class="container-fluid d-flex justify-content-center align-tems-center footer">
         <%- include('../partials/layout/footer'); %>
     </footer>
