--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <%- include('../partials/heads/homeHead'); %>
+    <%- include('../partials/heads/homeResponsiveHead'); %>
 </head>
 <body class="container-lg homepage-body safari_only no-scroll">
 
