fixing button height on 13-inch mac

--- a/public/style/homepage.css
+++ b/public/style/homepage.css
@@ -62,9 +62,8 @@
 		height:16.5em;
 	}
 
-	#divebutton {
-		margin-bottom: 16px;
-		margin-top: 16px;
+	#diveButton {
+		margin-top: -32px;
 	}
 }
 
