--- a/public/style/homepage.css
+++ b/public/style/homepage.css
@@ -67,6 +67,21 @@
 	}
 }
 
+@media screen and (max-width:1366px) and (max-height:768px) {
+	#personnalLogo {
+		width:13.5em;
+		height:13.5em;
+	}
+
+	#personnalText {
+		margin-top: 1.8em;
+	}
+
+	#diveButton {
+		margin-top: 8px;
+	}
+}
+
 @media screen and (max-width: 1280px) {
 	#personnalLogo{
 		width:12.5em;
