--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -19,7 +19,7 @@
         </div>
 
         <div class="d-flex justify-content-md-center justify-content-lg-start align-items-start" id="personnalText">
-            <h1><%- parsed_bio.text_bio[0] %> <span class="description" id="typed-desc"></span> </h1>
+            <h1 class="hometitle"><%- parsed_bio.text_bio[0] %> <span class="description" id="typed-desc"></span> </h1>
         </div>
 
         <div id="diveButton">
